--- a/css/styleshare.css
+++ b/css/styleshare.css
@@ -20,20 +20,27 @@ body.bgIMG
 .logotype{
 	width: 100%;
 	display: fixed;
-	height: 10vh;
+	height: auto;
 	top: 0;
-	position: absolute;
+	position: fixed;
+}
+
+.logocas{
+	height: auto;
+	width: 28vh;
+	padding-left: 1em;
+	padding-top: 10px;
+	padding-bottom: 1em;
 }
 
 .loginfull{
 	background-color: rgb(255, 255, 255, .8);
-	width: 40%;
+	width: 90%;
 	height: auto;
 	padding: 6vh 3vh;
 	position: absolute;
 	text-align: center;
-	top: -18em;
-	left: 30%;
+	top: -15em;
 }
 
 .form-control {
@@ -99,11 +106,10 @@ img.icons{
 }
 
 @media only screen and (max-width: 776px) {
-  .loginfull{
-	width: 90%;
-	top: -15em;
-	left: 5%;
-}
+  .logocas{
+  	width: 20vh;
+  	padding-left: 1em;
+  }
 
   .divmiddle{
 	margin-top: 70px;
